Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Bé trai nhét bút chì 8 cm vào hậu môn",
+    "content": "Một bé trai 5 tuổi ở TP HCM đã nhét một chiếc bút chì dài 8 cm vào hậu môn. Khi cảm thấy đau, bé đã báo cho mẹ và được đưa đến bệnh viện. Tại đây, bác sĩ đã phẫu thuật để lấy chiếc bút chì ra mà không gây tổn thương đáng kể cho niêm mạc hậu môn. Các bác sĩ cảnh báo rằng đây không phải là trường hợp hiếm gặp và phụ huynh cần giám sát trẻ nhỏ cẩn thận để tránh những tai nạn tương tự.",
+    "link": "https://vnexpress.net/be-trai-nhet-but-chi-8-cm-vao-hau-mon-4864048.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao bé trai nhét bút chì vào hậu môn?",
+    "answers": [
+      {
+        "text": "Vì bé cảm thấy đau và muốn kể với mẹ.",
+        "correct": true
+      },
+      {
+        "text": "Bé muốn chơi đùa với bút chì.",
+        "correct": false
+      },
+      {
+        "text": "Bé không biết đó là nguy hiểm.",
+        "correct": false
+      },
+      {
+        "text": "Bé đã thấy người lớn làm điều đó.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tinh hoa võ Việt tụ đất cố đô",
     "content": "Ngày 21-3-2025, Ngày hội Tinh hoa võ Việt lần thứ nhất đã được tổ chức tại quảng trường Ngọ Môn, Huế, đánh dấu sự trở lại của một lễ hội võ thuật cổ truyền quy mô lớn sau 80 năm. Sự kiện đã trình diễn nhiều môn phái như Võ Kinh Vạn An, Vovinam và võ Bình Định, thu hút sự tham gia của đông đảo người dân và du khách. Màn biểu diễn võ thuật không chỉ thể hiện kỹ năng mà còn gắn liền với triết lý võ học của dân tộc, đồng thời góp phần bảo tồn di sản văn hóa võ thuật Việt Nam.",
     "link": "https://tuoitre.vn/tinh-hoa-vo-viet-tu-dat-co-do-2025032123144173.htm",
@@ -955,33 +982,6 @@
     ]
   },
   {
-    "title": "Cầu Ba Son rực rỡ nối các đô thị hiện đại hai bờ sông Sài Gòn",
-    "content": "Cầu Ba Son, còn được gọi là cầu Thủ Thiêm 2, đã hoàn thành hệ thống chiếu sáng mỹ thuật vào đầu năm 2025, tạo nên một biểu tượng mới cho TP.HCM. Cầu không chỉ kết nối giao thông giữa quận 1 và khu đô thị Thủ Thiêm mà còn là điểm nhấn trong không gian đô thị ven sông Sài Gòn, thu hút du khách và người dân. Hệ thống chiếu sáng hiện đại giúp cầu trở nên lung linh vào ban đêm và có khả năng thay đổi màu sắc theo các sự kiện đặc biệt, góp phần nâng cao trải nghiệm tham quan của người dân và du khách.",
-    "link": "https://tuoitre.vn/cau-ba-son-ruc-ro-noi-cac-do-thi-hien-dai-hai-bo-song-sai-gon-20250320164603305.htm",
-    "cat": "thoi-su",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Cầu Ba Son có vai trò gì trong việc kết nối TP.HCM?",
-    "answers": [
-      {
-        "text": "Nó kết nối giao thông giữa quận 1 và khu đô thị Thủ Thiêm.",
-        "correct": true
-      },
-      {
-        "text": "Nó chỉ là một cây cầu bình thường.",
-        "correct": false
-      },
-      {
-        "text": "Nó không có vai trò gì đặc biệt.",
-        "correct": false
-      },
-      {
-        "text": "Nó là cầu dành riêng cho người đi bộ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bạn trẻ thích thú nhận quà tại gian hàng Việt Nam xanh",
     "content": "Vào sáng ngày 21-3, gian hàng chương trình Việt Nam Xanh tại Lễ hội Thanh niên TP.HCM thu hút sự tham gia của nhiều bạn trẻ. Tại đây, các bạn trẻ có cơ hội chơi game và làm khảo sát để nhận những phần quà hấp dẫn như ly uống nước, nón kết và các sản phẩm chăm sóc cá nhân. Gian hàng không chỉ mang đến niềm vui mà còn giới thiệu mục tiêu bảo vệ môi trường và phát triển bền vững của chương trình.",
     "link": "https://tuoitre.vn/ban-tre-thich-thu-nhan-qua-tai-gian-hang-viet-nam-xanh-20250321172330742.htm",
@@ -1004,6 +1004,33 @@
       },
       {
         "text": "Chỉ có diễn thuyết về môi trường",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cầu Ba Son rực rỡ nối các đô thị hiện đại hai bờ sông Sài Gòn",
+    "content": "Cầu Ba Son, còn được gọi là cầu Thủ Thiêm 2, đã hoàn thành hệ thống chiếu sáng mỹ thuật vào đầu năm 2025, tạo nên một biểu tượng mới cho TP.HCM. Cầu không chỉ kết nối giao thông giữa quận 1 và khu đô thị Thủ Thiêm mà còn là điểm nhấn trong không gian đô thị ven sông Sài Gòn, thu hút du khách và người dân. Hệ thống chiếu sáng hiện đại giúp cầu trở nên lung linh vào ban đêm và có khả năng thay đổi màu sắc theo các sự kiện đặc biệt, góp phần nâng cao trải nghiệm tham quan của người dân và du khách.",
+    "link": "https://tuoitre.vn/cau-ba-son-ruc-ro-noi-cac-do-thi-hien-dai-hai-bo-song-sai-gon-20250320164603305.htm",
+    "cat": "thoi-su",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Cầu Ba Son có vai trò gì trong việc kết nối TP.HCM?",
+    "answers": [
+      {
+        "text": "Nó kết nối giao thông giữa quận 1 và khu đô thị Thủ Thiêm.",
+        "correct": true
+      },
+      {
+        "text": "Nó chỉ là một cây cầu bình thường.",
+        "correct": false
+      },
+      {
+        "text": "Nó không có vai trò gì đặc biệt.",
+        "correct": false
+      },
+      {
+        "text": "Nó là cầu dành riêng cho người đi bộ.",
         "correct": false
       }
     ]
@@ -3061,60 +3088,6 @@
     ]
   },
   {
-    "title": "4 việc làm gây hại tim mạch trong mùa nắng nóng",
-    "content": "Trong mùa nắng nóng, có bốn việc làm gây hại cho tim mạch mà mọi người cần tránh. Đó là tiếp xúc nhiệt cao đột ngột, uống nhiều rượu bia và cà phê, ăn mặn cùng thực phẩm chế biến sẵn, và lười vận động hoặc tập thể dục quá sức. Những hành động này có thể dẫn đến các vấn đề nghiêm trọng như đột quỵ, nhồi máu cơ tim và các triệu chứng như chóng mặt, khó thở.",
-    "link": "https://vnexpress.net/4-viec-lam-gay-hai-tim-mach-trong-mua-nang-nong-4863752.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Những việc làm nào gây hại cho tim mạch trong mùa nắng nóng?",
-    "answers": [
-      {
-        "text": "Tiếp xúc nhiệt cao đột ngột, uống rượu bia, ăn mặn, lười vận động",
-        "correct": true
-      },
-      {
-        "text": "Tắm nước lạnh, ngủ đủ giấc, ăn nhiều rau xanh",
-        "correct": false
-      },
-      {
-        "text": "Đi bộ thường xuyên, uống đủ nước, tránh nắng",
-        "correct": false
-      },
-      {
-        "text": "Chơi thể thao ngoài trời, ăn nhiều trái cây, tránh đồ ngọt",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "5 cách bảo vệ thận",
-    "content": "Bài viết đề cập đến 5 cách bảo vệ thận, bao gồm việc uống đủ nước để loại bỏ độc tố, tránh uống rượu bia và thuốc lá, khám sức khỏe định kỳ, duy trì lối sống lành mạnh và hạn chế lượng muối tiêu thụ. Việc chăm sóc thận rất quan trọng để ngăn ngừa suy thận và các bệnh liên quan. Những biện pháp này giúp nâng cao sức khỏe thận và phòng ngừa các bệnh nghiêm trọng.",
-    "link": "https://vnexpress.net/5-cach-bao-ve-than-4864069.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Làm thế nào để bảo vệ sức khỏe thận hiệu quả?",
-    "answers": [
-      {
-        "text": "Uống đủ nước và không uống rượu bia.",
-        "correct": true
-      },
-      {
-        "text": "Tăng cường ăn mặn.",
-        "correct": false
-      },
-      {
-        "text": "Không cần kiểm tra sức khỏe định kỳ.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần tập thể dục một lần mỗi tháng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "5 thực phẩm có thể khiến não nhanh lão hóa",
     "content": "Bài viết đề cập đến 5 loại thực phẩm có thể làm gia tăng tốc độ lão hóa của não, bao gồm thực phẩm chế biến sẵn, đường, chất béo bão hòa và carbohydrate tinh chế. Những thực phẩm này không chỉ làm suy yếu chức năng não mà còn gây viêm, rối loạn chức năng nhận thức. Các loại thịt đỏ và thịt chế biến cũng nằm trong danh sách, do chứa nhiều chất bảo quản và chất béo bão hòa. Cuối cùng, việc tiêu thụ rượu bia cũng được nhấn mạnh là có hại cho não và có thể làm giảm thể tích não.",
     "link": "https://vnexpress.net/5-thuc-pham-co-the-khien-nao-nhanh-lao-hoa-4864059.html",
@@ -3168,6 +3141,60 @@
       },
       {
         "text": "Giành huy chương vàng Olympic",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "5 cách bảo vệ thận",
+    "content": "Bài viết đề cập đến 5 cách bảo vệ thận, bao gồm việc uống đủ nước để loại bỏ độc tố, tránh uống rượu bia và thuốc lá, khám sức khỏe định kỳ, duy trì lối sống lành mạnh và hạn chế lượng muối tiêu thụ. Việc chăm sóc thận rất quan trọng để ngăn ngừa suy thận và các bệnh liên quan. Những biện pháp này giúp nâng cao sức khỏe thận và phòng ngừa các bệnh nghiêm trọng.",
+    "link": "https://vnexpress.net/5-cach-bao-ve-than-4864069.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Làm thế nào để bảo vệ sức khỏe thận hiệu quả?",
+    "answers": [
+      {
+        "text": "Uống đủ nước và không uống rượu bia.",
+        "correct": true
+      },
+      {
+        "text": "Tăng cường ăn mặn.",
+        "correct": false
+      },
+      {
+        "text": "Không cần kiểm tra sức khỏe định kỳ.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần tập thể dục một lần mỗi tháng.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "4 việc làm gây hại tim mạch trong mùa nắng nóng",
+    "content": "Trong mùa nắng nóng, có bốn việc làm gây hại cho tim mạch mà mọi người cần tránh. Đó là tiếp xúc nhiệt cao đột ngột, uống nhiều rượu bia và cà phê, ăn mặn cùng thực phẩm chế biến sẵn, và lười vận động hoặc tập thể dục quá sức. Những hành động này có thể dẫn đến các vấn đề nghiêm trọng như đột quỵ, nhồi máu cơ tim và các triệu chứng như chóng mặt, khó thở.",
+    "link": "https://vnexpress.net/4-viec-lam-gay-hai-tim-mach-trong-mua-nang-nong-4863752.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Những việc làm nào gây hại cho tim mạch trong mùa nắng nóng?",
+    "answers": [
+      {
+        "text": "Tiếp xúc nhiệt cao đột ngột, uống rượu bia, ăn mặn, lười vận động",
+        "correct": true
+      },
+      {
+        "text": "Tắm nước lạnh, ngủ đủ giấc, ăn nhiều rau xanh",
+        "correct": false
+      },
+      {
+        "text": "Đi bộ thường xuyên, uống đủ nước, tránh nắng",
+        "correct": false
+      },
+      {
+        "text": "Chơi thể thao ngoài trời, ăn nhiều trái cây, tránh đồ ngọt",
         "correct": false
       }
     ]
