Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "TP HCM sẽ trình diễn 10.500 drone đêm 30/4",
+    "content": "TP Hồ Chí Minh sẽ tổ chức trình diễn 10.500 drone vào đêm 30/4, sự kiện lớn nhất từ trước đến nay tại Việt Nam. Bên cạnh màn bắn pháo hoa nghệ thuật, thành phố còn có nhiều hoạt động văn hóa thể thao diễn ra tại phố đi bộ Nguyễn Huệ. Sở Văn hóa và Thể thao cũng đề xuất xác lập kỷ lục Việt Nam về số lượng drone bay cùng lúc.",
+    "link": "https://vnexpress.net/tp-hcm-se-trinh-dien-10-500-drone-dem-30-4-4864408.html",
+    "cat": "thoi-su",
+    "positivity": 9,
+    "importance": 8,
+    "question": "TP HCM sẽ trình diễn bao nhiêu drone vào đêm 30/4?",
+    "answers": [
+      {
+        "text": "10.500 drone",
+        "correct": true
+      },
+      {
+        "text": "5.000 drone",
+        "correct": false
+      },
+      {
+        "text": "1.000 drone",
+        "correct": false
+      },
+      {
+        "text": "4.000 drone",
+        "correct": false
+      },
+      {
+        "text": "2.000 drone",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bé trai nhét bút chì 8 cm vào hậu môn",
     "content": "Một bé trai 5 tuổi ở TP HCM đã nhét một chiếc bút chì dài 8 cm vào hậu môn. Khi cảm thấy đau, bé đã báo cho mẹ và được đưa đến bệnh viện. Tại đây, bác sĩ đã phẫu thuật để lấy chiếc bút chì ra mà không gây tổn thương đáng kể cho niêm mạc hậu môn. Các bác sĩ cảnh báo rằng đây không phải là trường hợp hiếm gặp và phụ huynh cần giám sát trẻ nhỏ cẩn thận để tránh những tai nạn tương tự.",
     "link": "https://vnexpress.net/be-trai-nhet-but-chi-8-cm-vao-hau-mon-4864048.html",
@@ -2235,6 +2266,33 @@
     ]
   },
   {
+    "title": "Tiêm vaccine HPV có làm teo buồng trứng không?",
+    "content": "Vaccine HPV không làm teo buồng trứng hoặc ảnh hưởng đến khả năng sinh sản của phụ nữ. Nghiên cứu cho thấy những người tiêm vaccine không có nguy cơ cao bị suy buồng trứng so với người chưa tiêm. Vaccine này được khuyến nghị bởi Tổ chức Y tế thế giới (WHO) như một biện pháp hiệu quả để phòng ngừa các bệnh do virus HPV gây ra, bao gồm ung thư cổ tử cung.",
+    "link": "https://vnexpress.net/tiem-vaccine-hpv-co-lam-teo-buong-trung-khong-4864194.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Tiêm vaccine HPV có gây ảnh hưởng đến buồng trứng không?",
+    "answers": [
+      {
+        "text": "Không, vaccine HPV không gây ảnh hưởng đến buồng trứng.",
+        "correct": true
+      },
+      {
+        "text": "Có, vaccine HPV làm teo buồng trứng.",
+        "correct": false
+      },
+      {
+        "text": "Có thể, vaccine HPV gây ra một số vấn đề sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Không rõ, cần nghiên cứu thêm về vaccine HPV.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thủ phạm gây đau rốn",
     "content": "Đau rốn có thể do nhiều nguyên nhân khác nhau, trong đó khó tiêu là nguyên nhân phổ biến nhất. Các nguyên nhân nghiêm trọng khác bao gồm viêm ruột thừa, viêm dạ dày, và bệnh Crohn. Đau rốn có thể kèm theo các triệu chứng như buồn nôn, tiêu chảy, và cảm giác nóng rát, tùy thuộc vào nguyên nhân cụ thể. Ngoài ra, táo bón và nhiễm trùng cũng là những yếu tố có thể gây ra cơn đau này.",
     "link": "https://vnexpress.net/thu-pham-gay-dau-ron-4864078.html",
@@ -2261,33 +2319,6 @@
       },
       {
         "text": "Bệnh Crohn",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tiêm vaccine HPV có làm teo buồng trứng không?",
-    "content": "Vaccine HPV không làm teo buồng trứng hoặc ảnh hưởng đến khả năng sinh sản của phụ nữ. Nghiên cứu cho thấy những người tiêm vaccine không có nguy cơ cao bị suy buồng trứng so với người chưa tiêm. Vaccine này được khuyến nghị bởi Tổ chức Y tế thế giới (WHO) như một biện pháp hiệu quả để phòng ngừa các bệnh do virus HPV gây ra, bao gồm ung thư cổ tử cung.",
-    "link": "https://vnexpress.net/tiem-vaccine-hpv-co-lam-teo-buong-trung-khong-4864194.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Tiêm vaccine HPV có gây ảnh hưởng đến buồng trứng không?",
-    "answers": [
-      {
-        "text": "Không, vaccine HPV không gây ảnh hưởng đến buồng trứng.",
-        "correct": true
-      },
-      {
-        "text": "Có, vaccine HPV làm teo buồng trứng.",
-        "correct": false
-      },
-      {
-        "text": "Có thể, vaccine HPV gây ra một số vấn đề sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Không rõ, cần nghiên cứu thêm về vaccine HPV.",
         "correct": false
       }
     ]
