--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,64 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Đóng bảo hiểm 30 năm, nghỉ hưu trước tuổi được hưởng chế độ ra sao?",
+    "content": "Bài viết giải đáp thắc mắc của một viên chức đã đóng bảo hiểm 30 năm và muốn nghỉ hưu trước tuổi theo nghị định 178/2024/NĐ-CP. Theo luật sư Nguyễn Hồng Linh, người này đủ điều kiện để nghỉ hưu trước tuổi và sẽ được hưởng đầy đủ lương hưu mà không bị trừ tỉ lệ do nghỉ hưu sớm. Ngoài ra, họ còn được hưởng các khoản trợ cấp khác theo quy định của pháp luật về bảo hiểm xã hội.",
+    "link": "https://tuoitre.vn/dong-bao-hiem-30-nam-nghi-huu-truoc-tuoi-duoc-huong-che-do-ra-sao-20250313135630462.htm",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Người đóng bảo hiểm 30 năm nghỉ hưu trước tuổi có được hưởng chế độ gì không?",
+    "answers": [
+      {
+        "text": "Có, họ sẽ được hưởng đầy đủ lương hưu và các khoản trợ cấp khác.",
+        "correct": true
+      },
+      {
+        "text": "Không, họ sẽ không được hưởng lương hưu.",
+        "correct": false
+      },
+      {
+        "text": "Họ chỉ được hưởng một phần lương hưu.",
+        "correct": false
+      },
+      {
+        "text": "Họ phải chờ đến tuổi nghỉ hưu mới được hưởng lương hưu.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Triệu Lệ Dĩnh chấp nhận trở nên xấu xí để \"bước qua vùng an toàn\"",
+    "content": "Triệu Lệ Dĩnh đã chấp nhận thay đổi hình ảnh của mình bằng cách nhận vai diễn khó khăn trong bộ phim \"Hoa hướng dương\", nơi cô vào vai một nữ tù nhân tìm lại cuộc sống sau khi mãn hạn tù. Với tạo hình giản dị và gần gũi, cô quyết tâm phá bỏ hình ảnh hoàn hảo để thử thách bản thân trong diễn xuất. Nữ diễn viên đang nỗ lực khẳng định vị thế của mình trong làng giải trí và nhận được sự khen ngợi từ đạo diễn và khán giả. Phim dự kiến ra mắt vào ngày 4/4 tới.",
+    "link": "https://dantri.com.vn/giai-tri/trieu-le-dinh-chap-nhan-tro-nen-xau-xi-de-buoc-qua-vung-an-toan-20250321111238551.htm",
+    "cat": "giai-tri",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao Triệu Lệ Dĩnh quyết định trở nên xấu xí trong vai diễn mới?",
+    "answers": [
+      {
+        "text": "Để thử thách bản thân và khẳng định diễn xuất.",
+        "correct": true
+      },
+      {
+        "text": "Để thu hút sự chú ý của khán giả.",
+        "correct": false
+      },
+      {
+        "text": "Để đổi mới phong cách cá nhân.",
+        "correct": false
+      },
+      {
+        "text": "Để hợp tác cùng với đạo diễn nổi tiếng.",
+        "correct": false
+      },
+      {
+        "text": "Để thể hiện sự tự tin hơn trong diễn xuất.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Xuyên đêm nấu ăn, khiêu vũ cùng người lạ",
     "content": "Bài viết giới thiệu về một không gian sinh hoạt chung mang tên The Airy Space ở Hà Nội, nơi mà những người trẻ có thể giao lưu, nấu ăn, khiêu vũ và chia sẻ với nhau. Mai Hoa, Triệu Vy và nhiều người khác đã tham gia các hoạt động này, tìm thấy cảm giác an toàn và thân thuộc mặc dù chưa quen biết nhau. Di Trần, người tổ chức, cho biết mục đích là tạo ra một nơi kết nối cho những ai cần giao lưu và giảm áp lực trong cuộc sống. Xu hướng này phản ánh nhu cầu giải tỏa cảm xúc và tìm kiếm sự đồng cảm trong xã hội hiện đại.",
     "link": "https://vnexpress.net/xuyen-dem-nau-an-khieu-vu-cung-nguoi-la-4863287.html",
@@ -134,33 +192,6 @@
       },
       {
         "text": "Vì không có giống lúa tốt",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Đóng bảo hiểm 30 năm, nghỉ hưu trước tuổi được hưởng chế độ ra sao?",
-    "content": "Bài viết giải đáp thắc mắc của một viên chức đã đóng bảo hiểm 30 năm và muốn nghỉ hưu trước tuổi theo nghị định 178/2024/NĐ-CP. Theo luật sư Nguyễn Hồng Linh, người này đủ điều kiện để nghỉ hưu trước tuổi và sẽ được hưởng đầy đủ lương hưu mà không bị trừ tỉ lệ do nghỉ hưu sớm. Ngoài ra, họ còn được hưởng các khoản trợ cấp khác theo quy định của pháp luật về bảo hiểm xã hội.",
-    "link": "https://tuoitre.vn/dong-bao-hiem-30-nam-nghi-huu-truoc-tuoi-duoc-huong-che-do-ra-sao-20250313135630462.htm",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Người đóng bảo hiểm 30 năm nghỉ hưu trước tuổi có được hưởng chế độ gì không?",
-    "answers": [
-      {
-        "text": "Có, họ sẽ được hưởng đầy đủ lương hưu và các khoản trợ cấp khác.",
-        "correct": true
-      },
-      {
-        "text": "Không, họ sẽ không được hưởng lương hưu.",
-        "correct": false
-      },
-      {
-        "text": "Họ chỉ được hưởng một phần lương hưu.",
-        "correct": false
-      },
-      {
-        "text": "Họ phải chờ đến tuổi nghỉ hưu mới được hưởng lương hưu.",
         "correct": false
       }
     ]
@@ -1712,33 +1743,6 @@
     ]
   },
   {
-    "title": "Phụ nữ tiền mãn kinh ăn gì cân bằng nội tiết?",
-    "content": "Phụ nữ trong giai đoạn tiền mãn kinh thường gặp nhiều triệu chứng khó chịu như mất ngủ, mệt mỏi và bốc hỏa. Để cân bằng nội tiết tố, chế độ dinh dưỡng đóng vai trò quan trọng. Các thực phẩm giàu phytoestrogen như hạt lanh và đậu nành, canxi và vitamin D từ rau lá xanh và sữa, chất xơ từ ngũ cốc và trái cây, cũng như chất béo lành mạnh từ cá béo và hạt chia có thể hỗ trợ giảm triệu chứng. Ngoài ra, bổ sung các tinh chất thiên nhiên cũng giúp cải thiện tình trạng sức khỏe của phụ nữ trong giai đoạn này.",
-    "link": "https://vnexpress.net/phu-nu-tien-man-kinh-an-gi-can-bang-noi-tiet-4864193.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Phụ nữ tiền mãn kinh nên ăn gì để cân bằng nội tiết tố?",
-    "answers": [
-      {
-        "text": "Thực phẩm giàu phytoestrogen như hạt lanh và đậu nành",
-        "correct": true
-      },
-      {
-        "text": "Thịt đỏ và đồ chiên",
-        "correct": false
-      },
-      {
-        "text": "Đồ uống có ga",
-        "correct": false
-      },
-      {
-        "text": "Thực phẩm chế biến sẵn",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bị ung thư phổi giai đoạn nào cần hóa trị?",
     "content": "Ung thư phổi giai đoạn hai có thể được điều trị bằng hóa trị, tùy thuộc vào tình trạng sức khỏe tổng thể và đặc điểm khối u của bệnh nhân. Hóa trị có thể thực hiện trước hoặc sau phẫu thuật nhằm giảm kích thước khối u hoặc loại bỏ tế bào ung thư còn sót lại. Nếu bệnh ở giai đoạn tiến triển, hóa trị sẽ là phương pháp điều trị chính để giảm triệu chứng và kéo dài thời gian sống. Để có phác đồ điều trị chính xác, bệnh nhân cần được bác sĩ khám và xét nghiệm kỹ lưỡng.",
     "link": "https://vnexpress.net/bi-ung-thu-phoi-giai-doan-nao-can-hoa-tri-4864117.html",
@@ -1788,6 +1792,33 @@
       },
       {
         "text": "Không cần lên kế hoạch tập luyện",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Phụ nữ tiền mãn kinh ăn gì cân bằng nội tiết?",
+    "content": "Phụ nữ trong giai đoạn tiền mãn kinh thường gặp nhiều triệu chứng khó chịu như mất ngủ, mệt mỏi và bốc hỏa. Để cân bằng nội tiết tố, chế độ dinh dưỡng đóng vai trò quan trọng. Các thực phẩm giàu phytoestrogen như hạt lanh và đậu nành, canxi và vitamin D từ rau lá xanh và sữa, chất xơ từ ngũ cốc và trái cây, cũng như chất béo lành mạnh từ cá béo và hạt chia có thể hỗ trợ giảm triệu chứng. Ngoài ra, bổ sung các tinh chất thiên nhiên cũng giúp cải thiện tình trạng sức khỏe của phụ nữ trong giai đoạn này.",
+    "link": "https://vnexpress.net/phu-nu-tien-man-kinh-an-gi-can-bang-noi-tiet-4864193.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Phụ nữ tiền mãn kinh nên ăn gì để cân bằng nội tiết tố?",
+    "answers": [
+      {
+        "text": "Thực phẩm giàu phytoestrogen như hạt lanh và đậu nành",
+        "correct": true
+      },
+      {
+        "text": "Thịt đỏ và đồ chiên",
+        "correct": false
+      },
+      {
+        "text": "Đồ uống có ga",
+        "correct": false
+      },
+      {
+        "text": "Thực phẩm chế biến sẵn",
         "correct": false
       }
     ]
@@ -3111,37 +3142,6 @@
     ]
   },
   {
-    "title": "Làm gì cắt cơn ho mà không dùng thuốc?",
-    "content": "Ho dai dẳng có thể gây khó chịu, đặc biệt là vào ban đêm. Để giảm triệu chứng ho mà không cần dùng thuốc, một số phương pháp tự nhiên và thảo dược có thể được áp dụng. Bài viết đề xuất những cách thức hiệu quả để giúp cắt cơn ho mà vẫn an toàn cho sức khỏe.",
-    "link": "https://vnexpress.net/lam-gi-cat-con-ho-ma-khong-dung-thuoc-4864094.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Có những cách nào để giảm cơn ho mà không cần thuốc?",
-    "answers": [
-      {
-        "text": "Sử dụng thảo dược và phương pháp tự nhiên",
-        "correct": true
-      },
-      {
-        "text": "Uống thuốc ho",
-        "correct": false
-      },
-      {
-        "text": "Sử dụng kháng sinh",
-        "correct": false
-      },
-      {
-        "text": "Ngủ nhiều hơn",
-        "correct": false
-      },
-      {
-        "text": "Hạn chế ăn uống",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Nguy cơ viêm khớp sau chấn thương",
     "content": "Viêm khớp sau chấn thương là một tình trạng khá phổ biến và thường tự hồi phục sau 2-3 tháng. Tuy nhiên, trong một số trường hợp, tình trạng này có thể kéo dài hoặc phát triển nặng hơn, gây ra nhiều biến chứng nghiêm trọng như nhiễm trùng khớp hay teo cơ. Các triệu chứng của viêm khớp bao gồm đau nhức, sưng, và khó cử động, do đó người bệnh cần thăm khám kịp thời để được điều trị thích hợp.",
     "link": "https://vnexpress.net/nguy-co-viem-khop-sau-chan-thuong-4864110.html",
@@ -3168,6 +3168,37 @@
       },
       {
         "text": "Chỉ vài ngày",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Làm gì cắt cơn ho mà không dùng thuốc?",
+    "content": "Ho dai dẳng có thể gây khó chịu, đặc biệt là vào ban đêm. Để giảm triệu chứng ho mà không cần dùng thuốc, một số phương pháp tự nhiên và thảo dược có thể được áp dụng. Bài viết đề xuất những cách thức hiệu quả để giúp cắt cơn ho mà vẫn an toàn cho sức khỏe.",
+    "link": "https://vnexpress.net/lam-gi-cat-con-ho-ma-khong-dung-thuoc-4864094.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Có những cách nào để giảm cơn ho mà không cần thuốc?",
+    "answers": [
+      {
+        "text": "Sử dụng thảo dược và phương pháp tự nhiên",
+        "correct": true
+      },
+      {
+        "text": "Uống thuốc ho",
+        "correct": false
+      },
+      {
+        "text": "Sử dụng kháng sinh",
+        "correct": false
+      },
+      {
+        "text": "Ngủ nhiều hơn",
+        "correct": false
+      },
+      {
+        "text": "Hạn chế ăn uống",
         "correct": false
       }
     ]
@@ -3374,6 +3405,33 @@
     ]
   },
   {
+    "title": "4 việc làm gây hại tim mạch trong mùa nắng nóng",
+    "content": "Trong mùa nắng nóng, có bốn việc làm gây hại cho tim mạch mà mọi người cần tránh. Đó là tiếp xúc nhiệt cao đột ngột, uống nhiều rượu bia và cà phê, ăn mặn cùng thực phẩm chế biến sẵn, và lười vận động hoặc tập thể dục quá sức. Những hành động này có thể dẫn đến các vấn đề nghiêm trọng như đột quỵ, nhồi máu cơ tim và các triệu chứng như chóng mặt, khó thở.",
+    "link": "https://vnexpress.net/4-viec-lam-gay-hai-tim-mach-trong-mua-nang-nong-4863752.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Những việc làm nào gây hại cho tim mạch trong mùa nắng nóng?",
+    "answers": [
+      {
+        "text": "Tiếp xúc nhiệt cao đột ngột, uống rượu bia, ăn mặn, lười vận động",
+        "correct": true
+      },
+      {
+        "text": "Tắm nước lạnh, ngủ đủ giấc, ăn nhiều rau xanh",
+        "correct": false
+      },
+      {
+        "text": "Đi bộ thường xuyên, uống đủ nước, tránh nắng",
+        "correct": false
+      },
+      {
+        "text": "Chơi thể thao ngoài trời, ăn nhiều trái cây, tránh đồ ngọt",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "5 thực phẩm có thể khiến não nhanh lão hóa",
     "content": "Bài viết đề cập đến 5 loại thực phẩm có thể làm gia tăng tốc độ lão hóa của não, bao gồm thực phẩm chế biến sẵn, đường, chất béo bão hòa và carbohydrate tinh chế. Những thực phẩm này không chỉ làm suy yếu chức năng não mà còn gây viêm, rối loạn chức năng nhận thức. Các loại thịt đỏ và thịt chế biến cũng nằm trong danh sách, do chứa nhiều chất bảo quản và chất béo bão hòa. Cuối cùng, việc tiêu thụ rượu bia cũng được nhấn mạnh là có hại cho não và có thể làm giảm thể tích não.",
     "link": "https://vnexpress.net/5-thuc-pham-co-the-khien-nao-nhanh-lao-hoa-4864059.html",
@@ -3400,33 +3458,6 @@
       },
       {
         "text": "Thịt gà",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hành trình Andreeva 'xé mác' thần đồng quần vợt",
-    "content": "Mirra Andreeva, một tay vợt trẻ người Nga, đã nhanh chóng vươn lên trong làng quần vợt thế giới, từ một tài năng trẻ trở thành một trong những tay vợt nữ hàng đầu. Cô nổi bật từ giữa năm 2023 và đạt được nhiều thành công ấn tượng trong mùa giải 2024, bao gồm chiến thắng trước những tên tuổi lớn như Ons Jabeur và Aryna Sabalenka. Bên cạnh tài năng trên sân, Andreeva còn nổi bật với sự điềm tĩnh và khả năng nghiên cứu đối thủ, cho thấy cô không chỉ là một thần đồng mà còn là một tay vợt có tiềm năng phát triển bền vững.",
-    "link": "https://vnexpress.net/hanh-trinh-andreeva-xe-mac-than-dong-quan-vot-4863771.html",
-    "cat": "the-thao",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Mirra Andreeva đã có những thành tích nào nổi bật trong quần vợt?",
-    "answers": [
-      {
-        "text": "Chiến thắng trước Ons Jabeur và Aryna Sabalenka",
-        "correct": true
-      },
-      {
-        "text": "Tham gia giải Grand Slam đầu tiên",
-        "correct": false
-      },
-      {
-        "text": "Được biết đến từ năm 2022",
-        "correct": false
-      },
-      {
-        "text": "Giành huy chương vàng Olympic",
         "correct": false
       }
     ]
@@ -3459,28 +3490,28 @@
     ]
   },
   {
-    "title": "4 việc làm gây hại tim mạch trong mùa nắng nóng",
-    "content": "Trong mùa nắng nóng, có bốn việc làm gây hại cho tim mạch mà mọi người cần tránh. Đó là tiếp xúc nhiệt cao đột ngột, uống nhiều rượu bia và cà phê, ăn mặn cùng thực phẩm chế biến sẵn, và lười vận động hoặc tập thể dục quá sức. Những hành động này có thể dẫn đến các vấn đề nghiêm trọng như đột quỵ, nhồi máu cơ tim và các triệu chứng như chóng mặt, khó thở.",
-    "link": "https://vnexpress.net/4-viec-lam-gay-hai-tim-mach-trong-mua-nang-nong-4863752.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
+    "title": "Hành trình Andreeva 'xé mác' thần đồng quần vợt",
+    "content": "Mirra Andreeva, một tay vợt trẻ người Nga, đã nhanh chóng vươn lên trong làng quần vợt thế giới, từ một tài năng trẻ trở thành một trong những tay vợt nữ hàng đầu. Cô nổi bật từ giữa năm 2023 và đạt được nhiều thành công ấn tượng trong mùa giải 2024, bao gồm chiến thắng trước những tên tuổi lớn như Ons Jabeur và Aryna Sabalenka. Bên cạnh tài năng trên sân, Andreeva còn nổi bật với sự điềm tĩnh và khả năng nghiên cứu đối thủ, cho thấy cô không chỉ là một thần đồng mà còn là một tay vợt có tiềm năng phát triển bền vững.",
+    "link": "https://vnexpress.net/hanh-trinh-andreeva-xe-mac-than-dong-quan-vot-4863771.html",
+    "cat": "the-thao",
+    "positivity": 9,
     "importance": 8,
-    "question": "Những việc làm nào gây hại cho tim mạch trong mùa nắng nóng?",
+    "question": "Mirra Andreeva đã có những thành tích nào nổi bật trong quần vợt?",
     "answers": [
       {
-        "text": "Tiếp xúc nhiệt cao đột ngột, uống rượu bia, ăn mặn, lười vận động",
+        "text": "Chiến thắng trước Ons Jabeur và Aryna Sabalenka",
         "correct": true
       },
       {
-        "text": "Tắm nước lạnh, ngủ đủ giấc, ăn nhiều rau xanh",
+        "text": "Tham gia giải Grand Slam đầu tiên",
         "correct": false
       },
       {
-        "text": "Đi bộ thường xuyên, uống đủ nước, tránh nắng",
+        "text": "Được biết đến từ năm 2022",
         "correct": false
       },
       {
-        "text": "Chơi thể thao ngoài trời, ăn nhiều trái cây, tránh đồ ngọt",
+        "text": "Giành huy chương vàng Olympic",
         "correct": false
       }
     ]
