Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Người Ấn Độ đón lễ Holi ở Việt Nam",
+    "content": "Người Ấn Độ tại Việt Nam, đặc biệt là ở TP HCM, đã tổ chức lễ Holi với sự tham gia của đông đảo bạn bè và đồng hương. Trong lễ hội này, họ chuẩn bị bột màu và các món ăn truyền thống để chúc phúc và gắn kết cộng đồng. Holi không chỉ là dịp để vui chơi mà còn mang ý nghĩa sâu sắc về tình yêu, sự tha thứ, và khởi đầu mới. Qua những năm, lễ hội này ngày càng trở nên phổ biến hơn trong cộng đồng người Việt.",
+    "link": "https://vnexpress.net/nguoi-an-do-don-le-holi-o-viet-nam-4863125.html",
+    "cat": "giai-tri",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Người Ấn Độ đã tổ chức lễ Holi như thế nào ở Việt Nam?",
+    "answers": [
+      {
+        "text": "Họ tổ chức lễ hội với bột màu và món ăn truyền thống.",
+        "correct": true
+      },
+      {
+        "text": "Họ chỉ ném nước và không có bột màu.",
+        "correct": false
+      },
+      {
+        "text": "Họ tổ chức lễ hội nhưng không có món ăn nào.",
+        "correct": false
+      },
+      {
+        "text": "Họ chỉ tổ chức lễ hội cho người Ấn Độ mà thôi.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Chiến sự Ukraine 22/3: Kiev chọc thủng phòng tuyến Nga, tràn vào Belgorod",
     "content": "Quân đội Ukraine đã đạt được những tiến triển mới trong cuộc chiến tại Belgorod, nơi họ đã chọc thủng phòng tuyến của Nga. Lực lượng Ukraine đã tận dụng cửa mở để chiếm thêm vị trí chiến lược, bao vây một nửa khu định cư Demidovka. Chiến dịch này được cho là có sự tương đồng với chiến dịch trước đó ở Kursk, mặc dù quy mô và thành công có phần hạn chế hơn.",
     "link": "https://dantri.com.vn/the-gioi/chien-su-ukraine-223-kiev-choc-thung-phong-tuyen-nga-tran-vao-belgorod-20250322061100720.htm",
@@ -134,33 +161,6 @@
       },
       {
         "text": "Cô ấy đã rời khỏi công ty quản lý.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "\"Sẽ là nói dối, nếu ta nói với trẻ rằng thành công chỉ đến từ sự nỗ lực\"",
-    "content": "Nam diễn viên Anthony Mackie vừa chia sẻ rằng sẽ là sai lầm nếu dạy trẻ em rằng thành công chỉ đến từ sự nỗ lực. Ông nhấn mạnh rằng yếu tố may mắn cũng đóng vai trò quan trọng trong việc đạt được thành công, và nhiều người nổi tiếng đã thừa nhận điều này. Mackie, người đã phải làm việc hơn 10.000 giờ trước khi có cơ hội lớn trong sự nghiệp, cho rằng sự may mắn không thể bị bỏ qua trong bất kỳ hành trình nào hướng tới thành công.",
-    "link": "https://dantri.com.vn/giao-duc/se-la-noi-doi-neu-ta-noi-voi-tre-rang-thanh-cong-chi-den-tu-su-no-luc-20250320211508860.htm",
-    "cat": "giao-duc",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tại sao Anthony Mackie cho rằng may mắn cũng quan trọng trong thành công?",
-    "answers": [
-      {
-        "text": "Vì thành công không chỉ đến từ nỗ lực mà còn do may mắn.",
-        "correct": true
-      },
-      {
-        "text": "Vì nỗ lực là yếu tố duy nhất quyết định thành công.",
-        "correct": false
-      },
-      {
-        "text": "Vì mọi người đều có thể thành công mà không cần nỗ lực.",
-        "correct": false
-      },
-      {
-        "text": "Vì chỉ những người tài năng mới thành công.",
         "correct": false
       }
     ]
@@ -304,6 +304,33 @@
       },
       {
         "text": "Giúp tiết kiệm chi phí cho việc phẫu thuật.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "\"Sẽ là nói dối, nếu ta nói với trẻ rằng thành công chỉ đến từ sự nỗ lực\"",
+    "content": "Nam diễn viên Anthony Mackie vừa chia sẻ rằng sẽ là sai lầm nếu dạy trẻ em rằng thành công chỉ đến từ sự nỗ lực. Ông nhấn mạnh rằng yếu tố may mắn cũng đóng vai trò quan trọng trong việc đạt được thành công, và nhiều người nổi tiếng đã thừa nhận điều này. Mackie, người đã phải làm việc hơn 10.000 giờ trước khi có cơ hội lớn trong sự nghiệp, cho rằng sự may mắn không thể bị bỏ qua trong bất kỳ hành trình nào hướng tới thành công.",
+    "link": "https://dantri.com.vn/giao-duc/se-la-noi-doi-neu-ta-noi-voi-tre-rang-thanh-cong-chi-den-tu-su-no-luc-20250320211508860.htm",
+    "cat": "giao-duc",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao Anthony Mackie cho rằng may mắn cũng quan trọng trong thành công?",
+    "answers": [
+      {
+        "text": "Vì thành công không chỉ đến từ nỗ lực mà còn do may mắn.",
+        "correct": true
+      },
+      {
+        "text": "Vì nỗ lực là yếu tố duy nhất quyết định thành công.",
+        "correct": false
+      },
+      {
+        "text": "Vì mọi người đều có thể thành công mà không cần nỗ lực.",
+        "correct": false
+      },
+      {
+        "text": "Vì chỉ những người tài năng mới thành công.",
         "correct": false
       }
     ]
