Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -170,6 +170,33 @@
     ]
   },
   {
+    "title": "Đạo diễn loạt sân khấu tiền tỷ Hoàng Công Cường: \"Cô đơn là bạn đồng hành\"",
+    "content": "Đạo diễn Hoàng Công Cường, nổi tiếng với các sự kiện lớn như bế mạc SEA Games 31, đã chia sẻ về hành trình làm nghề đầy thách thức và những cảm xúc cô đơn mà anh trải qua. Anh cảm thấy nghề này như một cuộc chiến với chính bản thân, nơi áp lực và trách nhiệm đè nặng lên vai. Cường coi sự cô đơn là người bạn đồng hành, giúp anh theo đuổi những giấc mơ lớn lao như việc thực hiện các show thực cảnh cho 63 tỉnh thành Việt Nam.",
+    "link": "https://dantri.com.vn/giai-tri/dao-dien-loat-san-khau-tien-ty-hoang-cong-cuong-co-don-la-ban-dong-hanh-20250321122353167.htm",
+    "cat": "giai-tri",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Đạo diễn Hoàng Công Cường chia sẻ điều gì về hành trình làm nghề của mình?",
+    "answers": [
+      {
+        "text": "Anh cảm thấy cô đơn là bạn đồng hành.",
+        "correct": true
+      },
+      {
+        "text": "Nghề này rất dễ dàng và không có áp lực.",
+        "correct": false
+      },
+      {
+        "text": "Anh không thích làm việc với các doanh nghiệp.",
+        "correct": false
+      },
+      {
+        "text": "Anh muốn từ bỏ sự nghiệp vì áp lực.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Lịch nghỉ hè của học sinh 63 tỉnh thành",
     "content": "Theo khung thời gian năm học của Bộ GD&ĐT, học sinh 63 tỉnh thành sẽ kết thúc năm học trước ngày 31/5 năm 2025. Thời gian nghỉ hè sẽ được xác định dựa trên kế hoạch thời gian năm học của các địa phương, đảm bảo đủ 35 tuần thực học. Các ngày nghỉ lễ, Tết cũng sẽ được thực hiện theo quy định của Bộ luật Lao động.",
     "link": "https://dantri.com.vn/giao-duc/lich-nghi-he-cua-hoc-sinh-63-tinh-thanh-20250321124716556.htm",
