Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Sàn tăng phí, người bán online muốn tăng giá",
+    "content": "Nhiều sàn thương mại điện tử tại Việt Nam sẽ tăng phí từ ngày 1-4, khiến nhiều người bán hàng online có kế hoạch điều chỉnh giá bán. Các tiểu thương cho biết việc tăng phí sẽ ảnh hưởng lớn đến lợi nhuận, buộc họ phải tăng giá sản phẩm để bù đắp chi phí. Tuy nhiên, điều này có thể dẫn đến việc khách hàng giảm mua sắm, gây khó khăn hơn cho các shop nhỏ trong việc duy trì hoạt động.",
+    "link": "https://tuoitre.vn/san-tang-phi-nguoi-ban-online-muon-tang-gia-20250322074542757.htm",
+    "cat": "kinh-doanh",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Việc tăng phí trên sàn thương mại điện tử sẽ ảnh hưởng như thế nào đến người bán hàng online?",
+    "answers": [
+      {
+        "text": "Người bán sẽ phải tăng giá sản phẩm để bù đắp chi phí.",
+        "correct": true
+      },
+      {
+        "text": "Người bán sẽ giảm giá sản phẩm để thu hút khách hàng.",
+        "correct": false
+      },
+      {
+        "text": "Người bán sẽ không thay đổi giá sản phẩm.",
+        "correct": false
+      },
+      {
+        "text": "Người bán sẽ chuyển sang kinh doanh offline.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tiền vệ Nhật Bản tham vọng vô địch World Cup 2026",
     "content": "Sau khi vượt qua vòng loại châu Á, đội trưởng Wataru Endo khẳng định Nhật Bản đặt mục tiêu vô địch World Cup 2026. Endo cho biết đội đang chuẩn bị kỹ lưỡng cho các trận đấu sắp tới và nhấn mạnh rằng họ có nhiều cầu thủ quyết tâm muốn vô địch. Nhật Bản đã giành suất dự World Cup 2026, lần thứ tám liên tiếp, và HLV Hajime Moriyasu cũng tin tưởng vào khả năng của đội.",
     "link": "https://vnexpress.net/tien-ve-nhat-ban-tham-vong-vo-dich-world-cup-2026-4864434.html",
@@ -931,6 +958,37 @@
     ]
   },
   {
+    "title": "Xuyên đêm nấu ăn, khiêu vũ cùng người lạ",
+    "content": "Bài viết giới thiệu về một không gian sinh hoạt chung mang tên The Airy Space ở Hà Nội, nơi mà những người trẻ có thể giao lưu, nấu ăn, khiêu vũ và chia sẻ với nhau. Mai Hoa, Triệu Vy và nhiều người khác đã tham gia các hoạt động này, tìm thấy cảm giác an toàn và thân thuộc mặc dù chưa quen biết nhau. Di Trần, người tổ chức, cho biết mục đích là tạo ra một nơi kết nối cho những ai cần giao lưu và giảm áp lực trong cuộc sống. Xu hướng này phản ánh nhu cầu giải tỏa cảm xúc và tìm kiếm sự đồng cảm trong xã hội hiện đại.",
+    "link": "https://vnexpress.net/xuyen-dem-nau-an-khieu-vu-cung-nguoi-la-4863287.html",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 7,
+    "question": "The Airy Space là nơi tổ chức hoạt động gì cho người trẻ?",
+    "answers": [
+      {
+        "text": "Nấu ăn và khiêu vũ cùng người lạ",
+        "correct": true
+      },
+      {
+        "text": "Chỉ tổ chức các buổi tiệc sinh nhật",
+        "correct": false
+      },
+      {
+        "text": "Chỉ dành cho những người đã quen biết nhau",
+        "correct": false
+      },
+      {
+        "text": "Tổ chức các buổi hội thảo chuyên đề",
+        "correct": false
+      },
+      {
+        "text": "Chỉ dành cho những người lớn tuổi",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đo mật độ xương bằng AI trong 30s",
     "content": "Bệnh viện Đại học Y Hà Nội đã ứng dụng công nghệ trí tuệ nhân tạo (AI) để đo mật độ xương chỉ trong 30 giây, giảm thời gian chờ đợi so với 15 phút trước đây. Phương pháp mới này không chỉ tiết kiệm thời gian mà còn nâng cao độ chính xác trong việc phát hiện bệnh loãng xương, một vấn đề ngày càng nghiêm trọng tại Việt Nam. AI trở thành công cụ hỗ trợ quan trọng cho các bác sĩ trong việc chẩn đoán và điều trị, đồng thời giúp giảm chi phí cho người bệnh.",
     "link": "https://vnexpress.net/do-mat-do-xuong-bang-ai-trong-30s-4863001.html",
@@ -1011,37 +1069,6 @@
       },
       {
         "text": "Để thể hiện sự tự tin hơn trong diễn xuất.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Xuyên đêm nấu ăn, khiêu vũ cùng người lạ",
-    "content": "Bài viết giới thiệu về một không gian sinh hoạt chung mang tên The Airy Space ở Hà Nội, nơi mà những người trẻ có thể giao lưu, nấu ăn, khiêu vũ và chia sẻ với nhau. Mai Hoa, Triệu Vy và nhiều người khác đã tham gia các hoạt động này, tìm thấy cảm giác an toàn và thân thuộc mặc dù chưa quen biết nhau. Di Trần, người tổ chức, cho biết mục đích là tạo ra một nơi kết nối cho những ai cần giao lưu và giảm áp lực trong cuộc sống. Xu hướng này phản ánh nhu cầu giải tỏa cảm xúc và tìm kiếm sự đồng cảm trong xã hội hiện đại.",
-    "link": "https://vnexpress.net/xuyen-dem-nau-an-khieu-vu-cung-nguoi-la-4863287.html",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 7,
-    "question": "The Airy Space là nơi tổ chức hoạt động gì cho người trẻ?",
-    "answers": [
-      {
-        "text": "Nấu ăn và khiêu vũ cùng người lạ",
-        "correct": true
-      },
-      {
-        "text": "Chỉ tổ chức các buổi tiệc sinh nhật",
-        "correct": false
-      },
-      {
-        "text": "Chỉ dành cho những người đã quen biết nhau",
-        "correct": false
-      },
-      {
-        "text": "Tổ chức các buổi hội thảo chuyên đề",
-        "correct": false
-      },
-      {
-        "text": "Chỉ dành cho những người lớn tuổi",
         "correct": false
       }
     ]
