--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,64 @@
     */
     const newsData = [
   {
+    "title": "Đường chạy phong cách 'ngôi đền tốc độ' của VM Volvo All-Star",
+    "content": "Đường chạy VnExpress Marathon Volvo All-Star 2025 có thiết kế phong cách 'ngôi đền tốc độ' với nhiều đoạn thẳng dài và ít khúc cua, hứa hẹn tạo điều kiện thuận lợi cho các vận động viên đua tốc. Giải chạy sẽ diễn ra vào ngày 20/4/2025 tại Hà Nội, với cự ly 21km và 42km. Đường chạy được tổ chức theo tiêu chuẩn quốc tế, có 20 trạm tiếp nước và các biển báo rõ ràng để hỗ trợ vận động viên. Ban tổ chức cũng đã điều chỉnh lộ trình giúp hạn chế giao cắt giữa các nhóm VĐV.",
+    "link": "https://vnexpress.net/duong-chay-phong-cach-ngoi-den-toc-do-cua-vm-volvo-all-star-4863070.html",
+    "cat": "the-thao",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Đường chạy VnExpress Marathon Volvo All-Star có điểm gì nổi bật?",
+    "answers": [
+      {
+        "text": "Nhiều đoạn thẳng dài, ít khúc cua",
+        "correct": true
+      },
+      {
+        "text": "Nhiều khúc cua gắt",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có một cự ly chạy",
+        "correct": false
+      },
+      {
+        "text": "Không có trạm tiếp nước",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Argentina hạ Uruguay trong ngày vắng Messi",
+    "content": "Argentina đã giành chiến thắng 1-0 trước Uruguay trên sân khách vào sáng 22/3, giúp họ tiến gần hơn đến cơ hội dự World Cup 2026. Thiago Almada là người ghi bàn quyết định ở phút 68, mặc dù đội bóng không có sự phục vụ của Messi và Lautaro Martinez do chấn thương. HLV Lionel Scaloni đã chỉ đạo các cầu thủ chơi phòng ngự phản công hiệu quả, tạo ra nhiều cơ hội trong trận đấu. Với chiến thắng này, Argentina đang dẫn đầu bảng vòng loại khu vực Nam Mỹ với 28 điểm.",
+    "link": "https://vnexpress.net/argentina-ha-uruguay-trong-ngay-vang-messi-4864454.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Argentina đã thắng Uruguay với tỷ số bao nhiêu?",
+    "answers": [
+      {
+        "text": "1-0",
+        "correct": true
+      },
+      {
+        "text": "2-1",
+        "correct": false
+      },
+      {
+        "text": "3-1",
+        "correct": false
+      },
+      {
+        "text": "0-0",
+        "correct": false
+      },
+      {
+        "text": "1-2",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Quốc Hoàng thắng khi đối thủ 'đánh trượt 9' ở Premier League Pool",
     "content": "Dương Quốc Hoàng đã có khởi đầu tốt tại giải pool 9 bi Premier League ở Sarajevo khi giành chiến thắng trước Eklent Kaci và Edward Koyongian. Trong trận đấu đầu tiên, Quốc Hoàng đã tận dụng cơ hội khi Kaci 'đánh trượt 9' và thắng 5-4, phá dớp thua 6 trận trước đó của các đại diện Việt Nam. Tuy nhiên, Quốc Hoàng cũng đã thất bại trước Sanjin Pehlivanovic với tỷ số 2-5 và hiện đang đứng thứ 12 trong bảng xếp hạng. Giải đấu sẽ tiếp tục với nhiều trận đấu quan trọng sắp tới.",
     "link": "https://vnexpress.net/quoc-hoang-thang-khi-doi-thu-danh-truot-9-o-premier-league-pool-4864441.html",
@@ -524,6 +582,33 @@
       },
       {
         "text": "Tham gia thi đấu tại giải vô địch quốc gia",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nhiễm liên cầu lợn sau ăn tiết canh",
+    "content": "Một người đàn ông 62 tuổi ở Quảng Ninh đã bị nhiễm liên cầu khuẩn lợn sau khi ăn tiết canh lợn tại một quán ăn không rõ nguồn gốc. Hai tuần sau khi ăn, ông xuất hiện triệu chứng như sốt cao, đau bụng và tiêu chảy. Kết quả xét nghiệm cho thấy ông mắc nhiễm khuẩn huyết do liên cầu khuẩn lợn, mặc dù những người cùng ăn không có triệu chứng nhưng vẫn có nguy cơ lây nhiễm. Bệnh có thể tiến triển nhanh chóng và dẫn đến nhiều biến chứng nghiêm trọng nếu không được điều trị kịp thời.",
+    "link": "https://vnexpress.net/nhiem-lien-cau-lon-sau-an-tiet-canh-4864381.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Nguyên nhân nào khiến người đàn ông ở Quảng Ninh nhiễm liên cầu khuẩn lợn?",
+    "answers": [
+      {
+        "text": "Ăn tiết canh lợn tại quán ăn không rõ nguồn gốc.",
+        "correct": true
+      },
+      {
+        "text": "Uống nước không sạch.",
+        "correct": false
+      },
+      {
+        "text": "Ăn nhiều rau sống.",
+        "correct": false
+      },
+      {
+        "text": "Chạm vào lợn bệnh.",
         "correct": false
       }
     ]
@@ -1132,28 +1217,32 @@
     ]
   },
   {
-    "title": "Lúa chết vì khô hạn, nông dân phải cắt cho bò ăn",
-    "content": "Khô hạn kéo dài tại Gia Lai đã khiến gần 50 ha lúa của người dân bị thiệt hại nặng nề, buộc họ phải cắt lúa để làm thức ăn cho bò. Ông Tônh và nhiều nông dân khác đang phải tìm cách cứu mùa màng bằng việc bơm nước từ giếng, nhưng nước ngày càng cạn kiệt. Tình trạng này không chỉ xảy ra ở Gia Lai mà còn lan rộng sang các tỉnh khác như Kon Tum, nơi khoảng 380 ha lúa và cây trồng khác cũng bị ảnh hưởng nghiêm trọng do thiếu nước tưới.",
-    "link": "https://vnexpress.net/lua-chet-vi-kho-han-nong-dan-phai-cat-cho-bo-an-4858759.html",
-    "cat": "thoi-su",
-    "positivity": 2,
-    "importance": 8,
-    "question": "Tại sao nông dân ở Gia Lai phải cắt lúa cho bò ăn?",
+    "title": "Xuyên đêm nấu ăn, khiêu vũ cùng người lạ",
+    "content": "Bài viết giới thiệu về một không gian sinh hoạt chung mang tên The Airy Space ở Hà Nội, nơi mà những người trẻ có thể giao lưu, nấu ăn, khiêu vũ và chia sẻ với nhau. Mai Hoa, Triệu Vy và nhiều người khác đã tham gia các hoạt động này, tìm thấy cảm giác an toàn và thân thuộc mặc dù chưa quen biết nhau. Di Trần, người tổ chức, cho biết mục đích là tạo ra một nơi kết nối cho những ai cần giao lưu và giảm áp lực trong cuộc sống. Xu hướng này phản ánh nhu cầu giải tỏa cảm xúc và tìm kiếm sự đồng cảm trong xã hội hiện đại.",
+    "link": "https://vnexpress.net/xuyen-dem-nau-an-khieu-vu-cung-nguoi-la-4863287.html",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 7,
+    "question": "The Airy Space là nơi tổ chức hoạt động gì cho người trẻ?",
     "answers": [
       {
-        "text": "Do khô hạn khiến lúa chết",
+        "text": "Nấu ăn và khiêu vũ cùng người lạ",
         "correct": true
       },
       {
-        "text": "Vì lúa bị sâu bệnh",
+        "text": "Chỉ tổ chức các buổi tiệc sinh nhật",
         "correct": false
       },
       {
-        "text": "Do thời tiết quá lạnh",
+        "text": "Chỉ dành cho những người đã quen biết nhau",
         "correct": false
       },
       {
-        "text": "Vì không có giống lúa tốt",
+        "text": "Tổ chức các buổi hội thảo chuyên đề",
+        "correct": false
+      },
+      {
+        "text": "Chỉ dành cho những người lớn tuổi",
         "correct": false
       }
     ]
@@ -1244,32 +1333,28 @@
     ]
   },
   {
-    "title": "Xuyên đêm nấu ăn, khiêu vũ cùng người lạ",
-    "content": "Bài viết giới thiệu về một không gian sinh hoạt chung mang tên The Airy Space ở Hà Nội, nơi mà những người trẻ có thể giao lưu, nấu ăn, khiêu vũ và chia sẻ với nhau. Mai Hoa, Triệu Vy và nhiều người khác đã tham gia các hoạt động này, tìm thấy cảm giác an toàn và thân thuộc mặc dù chưa quen biết nhau. Di Trần, người tổ chức, cho biết mục đích là tạo ra một nơi kết nối cho những ai cần giao lưu và giảm áp lực trong cuộc sống. Xu hướng này phản ánh nhu cầu giải tỏa cảm xúc và tìm kiếm sự đồng cảm trong xã hội hiện đại.",
-    "link": "https://vnexpress.net/xuyen-dem-nau-an-khieu-vu-cung-nguoi-la-4863287.html",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 7,
-    "question": "The Airy Space là nơi tổ chức hoạt động gì cho người trẻ?",
+    "title": "Lúa chết vì khô hạn, nông dân phải cắt cho bò ăn",
+    "content": "Khô hạn kéo dài tại Gia Lai đã khiến gần 50 ha lúa của người dân bị thiệt hại nặng nề, buộc họ phải cắt lúa để làm thức ăn cho bò. Ông Tônh và nhiều nông dân khác đang phải tìm cách cứu mùa màng bằng việc bơm nước từ giếng, nhưng nước ngày càng cạn kiệt. Tình trạng này không chỉ xảy ra ở Gia Lai mà còn lan rộng sang các tỉnh khác như Kon Tum, nơi khoảng 380 ha lúa và cây trồng khác cũng bị ảnh hưởng nghiêm trọng do thiếu nước tưới.",
+    "link": "https://vnexpress.net/lua-chet-vi-kho-han-nong-dan-phai-cat-cho-bo-an-4858759.html",
+    "cat": "thoi-su",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Tại sao nông dân ở Gia Lai phải cắt lúa cho bò ăn?",
     "answers": [
       {
-        "text": "Nấu ăn và khiêu vũ cùng người lạ",
+        "text": "Do khô hạn khiến lúa chết",
         "correct": true
       },
       {
-        "text": "Chỉ tổ chức các buổi tiệc sinh nhật",
+        "text": "Vì lúa bị sâu bệnh",
         "correct": false
       },
       {
-        "text": "Chỉ dành cho những người đã quen biết nhau",
+        "text": "Do thời tiết quá lạnh",
         "correct": false
       },
       {
-        "text": "Tổ chức các buổi hội thảo chuyên đề",
-        "correct": false
-      },
-      {
-        "text": "Chỉ dành cho những người lớn tuổi",
+        "text": "Vì không có giống lúa tốt",
         "correct": false
       }
     ]
@@ -1940,33 +2025,6 @@
     ]
   },
   {
-    "title": "Ngày mai diễn ra Ngày hội sáng tạo VF 3",
-    "content": "Ngày 22/3, VinFast sẽ tổ chức sự kiện \"Ngày hội sáng tạo VF 3\" tại ba địa điểm: Hà Nội, Quảng Nam và TP HCM. Sự kiện này nhằm trao giải cho các thiết kế xe sáng tạo, với gần 500 bài dự thi và tổng giá trị giải thưởng lên đến 650 triệu đồng. Ban giám khảo bao gồm nhiều chuyên gia và nghệ sĩ, sẽ lựa chọn các mẫu xe đại diện cho từng miền và trao các giải thưởng khác nhau cho những thiết kế xuất sắc.",
-    "link": "https://vnexpress.net/ngay-mai-dien-ra-ngay-hoi-sang-tao-vf-3-4864359.html",
-    "cat": "kinh-doanh",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Ngày hội sáng tạo VF 3 sẽ diễn ra vào ngày nào và ở đâu?",
-    "answers": [
-      {
-        "text": "Ngày 22/3 tại Hà Nội, Quảng Nam và TP HCM",
-        "correct": true
-      },
-      {
-        "text": "Ngày 21/3 tại Hà Nội và TP HCM",
-        "correct": false
-      },
-      {
-        "text": "Ngày 22/3 tại Hà Nội và Đà Nẵng",
-        "correct": false
-      },
-      {
-        "text": "Ngày 23/3 tại TP HCM và Quảng Nam",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Nha khoa Nhân tâm khai trương chi nhánh quận 7",
     "content": "Nha khoa Nhân Tâm đã chính thức khai trương chi nhánh mới tại quận 7, TP HCM vào ngày 22/3/2025. Chi nhánh này được trang bị công nghệ hiện đại như hệ thống chụp CT Cone Beam 3D và kỹ thuật số trong chẩn đoán và điều trị. Nhân Tâm cũng triển khai nhiều ưu đãi hấp dẫn cho khách hàng trong dịp khai trương, bao gồm cơ hội trúng thưởng và quà tặng khi sử dụng dịch vụ.",
     "link": "https://vnexpress.net/nha-khoa-nhan-tam-khai-truong-chi-nhanh-quan-7-4864246.html",
@@ -2020,6 +2078,33 @@
       },
       {
         "text": "Số lượng tinh trùng nhiều",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ngày mai diễn ra Ngày hội sáng tạo VF 3",
+    "content": "Ngày 22/3, VinFast sẽ tổ chức sự kiện \"Ngày hội sáng tạo VF 3\" tại ba địa điểm: Hà Nội, Quảng Nam và TP HCM. Sự kiện này nhằm trao giải cho các thiết kế xe sáng tạo, với gần 500 bài dự thi và tổng giá trị giải thưởng lên đến 650 triệu đồng. Ban giám khảo bao gồm nhiều chuyên gia và nghệ sĩ, sẽ lựa chọn các mẫu xe đại diện cho từng miền và trao các giải thưởng khác nhau cho những thiết kế xuất sắc.",
+    "link": "https://vnexpress.net/ngay-mai-dien-ra-ngay-hoi-sang-tao-vf-3-4864359.html",
+    "cat": "kinh-doanh",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Ngày hội sáng tạo VF 3 sẽ diễn ra vào ngày nào và ở đâu?",
+    "answers": [
+      {
+        "text": "Ngày 22/3 tại Hà Nội, Quảng Nam và TP HCM",
+        "correct": true
+      },
+      {
+        "text": "Ngày 21/3 tại Hà Nội và TP HCM",
+        "correct": false
+      },
+      {
+        "text": "Ngày 22/3 tại Hà Nội và Đà Nẵng",
+        "correct": false
+      },
+      {
+        "text": "Ngày 23/3 tại TP HCM và Quảng Nam",
         "correct": false
       }
     ]
@@ -2373,33 +2458,6 @@
     ]
   },
   {
-    "title": "Bạn trẻ thích thú nhận quà tại gian hàng Việt Nam xanh",
-    "content": "Vào sáng ngày 21-3, gian hàng chương trình Việt Nam Xanh tại Lễ hội Thanh niên TP.HCM thu hút sự tham gia của nhiều bạn trẻ. Tại đây, các bạn trẻ có cơ hội chơi game và làm khảo sát để nhận những phần quà hấp dẫn như ly uống nước, nón kết và các sản phẩm chăm sóc cá nhân. Gian hàng không chỉ mang đến niềm vui mà còn giới thiệu mục tiêu bảo vệ môi trường và phát triển bền vững của chương trình.",
-    "link": "https://tuoitre.vn/ban-tre-thich-thu-nhan-qua-tai-gian-hang-viet-nam-xanh-20250321172330742.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Gian hàng Việt Nam xanh tại Lễ hội Thanh niên TP.HCM có hoạt động gì hấp dẫn?",
-    "answers": [
-      {
-        "text": "Chơi game và làm khảo sát để nhận quà",
-        "correct": true
-      },
-      {
-        "text": "Chỉ có trưng bày sản phẩm",
-        "correct": false
-      },
-      {
-        "text": "Không có hoạt động gì đặc biệt",
-        "correct": false
-      },
-      {
-        "text": "Chỉ có diễn thuyết về môi trường",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cầu Ba Son rực rỡ nối các đô thị hiện đại hai bờ sông Sài Gòn",
     "content": "Cầu Ba Son, còn được gọi là cầu Thủ Thiêm 2, đã hoàn thành hệ thống chiếu sáng mỹ thuật vào đầu năm 2025, tạo nên một biểu tượng mới cho TP.HCM. Cầu không chỉ kết nối giao thông giữa quận 1 và khu đô thị Thủ Thiêm mà còn là điểm nhấn trong không gian đô thị ven sông Sài Gòn, thu hút du khách và người dân. Hệ thống chiếu sáng hiện đại giúp cầu trở nên lung linh vào ban đêm và có khả năng thay đổi màu sắc theo các sự kiện đặc biệt, góp phần nâng cao trải nghiệm tham quan của người dân và du khách.",
     "link": "https://tuoitre.vn/cau-ba-son-ruc-ro-noi-cac-do-thi-hien-dai-hai-bo-song-sai-gon-20250320164603305.htm",
@@ -2422,6 +2480,33 @@
       },
       {
         "text": "Nó là cầu dành riêng cho người đi bộ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bạn trẻ thích thú nhận quà tại gian hàng Việt Nam xanh",
+    "content": "Vào sáng ngày 21-3, gian hàng chương trình Việt Nam Xanh tại Lễ hội Thanh niên TP.HCM thu hút sự tham gia của nhiều bạn trẻ. Tại đây, các bạn trẻ có cơ hội chơi game và làm khảo sát để nhận những phần quà hấp dẫn như ly uống nước, nón kết và các sản phẩm chăm sóc cá nhân. Gian hàng không chỉ mang đến niềm vui mà còn giới thiệu mục tiêu bảo vệ môi trường và phát triển bền vững của chương trình.",
+    "link": "https://tuoitre.vn/ban-tre-thich-thu-nhan-qua-tai-gian-hang-viet-nam-xanh-20250321172330742.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Gian hàng Việt Nam xanh tại Lễ hội Thanh niên TP.HCM có hoạt động gì hấp dẫn?",
+    "answers": [
+      {
+        "text": "Chơi game và làm khảo sát để nhận quà",
+        "correct": true
+      },
+      {
+        "text": "Chỉ có trưng bày sản phẩm",
+        "correct": false
+      },
+      {
+        "text": "Không có hoạt động gì đặc biệt",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có diễn thuyết về môi trường",
         "correct": false
       }
     ]
@@ -2790,6 +2875,33 @@
     ]
   },
   {
+    "title": "Bị ung thư phổi giai đoạn nào cần hóa trị?",
+    "content": "Ung thư phổi giai đoạn hai có thể được điều trị bằng hóa trị, tùy thuộc vào tình trạng sức khỏe tổng thể và đặc điểm khối u của bệnh nhân. Hóa trị có thể thực hiện trước hoặc sau phẫu thuật nhằm giảm kích thước khối u hoặc loại bỏ tế bào ung thư còn sót lại. Nếu bệnh ở giai đoạn tiến triển, hóa trị sẽ là phương pháp điều trị chính để giảm triệu chứng và kéo dài thời gian sống. Để có phác đồ điều trị chính xác, bệnh nhân cần được bác sĩ khám và xét nghiệm kỹ lưỡng.",
+    "link": "https://vnexpress.net/bi-ung-thu-phoi-giai-doan-nao-can-hoa-tri-4864117.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Bị ung thư phổi giai đoạn hai thì có cần hóa trị không?",
+    "answers": [
+      {
+        "text": "Có, thường cần hóa trị để hỗ trợ điều trị.",
+        "correct": true
+      },
+      {
+        "text": "Không, chỉ cần theo dõi triệu chứng.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ cần thuốc uống.",
+        "correct": false
+      },
+      {
+        "text": "Không cần hóa trị nếu không có triệu chứng.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "8 bước lên dây cót tinh thần trước ngày chạy giải",
     "content": "Bài viết hướng dẫn runner 8 bước chuẩn bị tinh thần trước ngày chạy giải, bao gồm việc đặt mục tiêu rõ ràng, công nhận tiến bộ, xác định ý nghĩa thành công và duy trì tư duy tích cực. Thời điểm 2-3 tuần trước ngày đua rất quan trọng, cần chú ý đến cả thể chất và tâm lý. Những mẹo hữu ích giúp runner tăng cường động lực và cải thiện hiệu suất trong cuộc đua sắp tới.",
     "link": "https://vnexpress.net/8-buoc-len-day-cot-tinh-than-truoc-ngay-chay-giai-4864017.html",
@@ -2839,33 +2951,6 @@
       },
       {
         "text": "Thực phẩm chế biến sẵn",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bị ung thư phổi giai đoạn nào cần hóa trị?",
-    "content": "Ung thư phổi giai đoạn hai có thể được điều trị bằng hóa trị, tùy thuộc vào tình trạng sức khỏe tổng thể và đặc điểm khối u của bệnh nhân. Hóa trị có thể thực hiện trước hoặc sau phẫu thuật nhằm giảm kích thước khối u hoặc loại bỏ tế bào ung thư còn sót lại. Nếu bệnh ở giai đoạn tiến triển, hóa trị sẽ là phương pháp điều trị chính để giảm triệu chứng và kéo dài thời gian sống. Để có phác đồ điều trị chính xác, bệnh nhân cần được bác sĩ khám và xét nghiệm kỹ lưỡng.",
-    "link": "https://vnexpress.net/bi-ung-thu-phoi-giai-doan-nao-can-hoa-tri-4864117.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Bị ung thư phổi giai đoạn hai thì có cần hóa trị không?",
-    "answers": [
-      {
-        "text": "Có, thường cần hóa trị để hỗ trợ điều trị.",
-        "correct": true
-      },
-      {
-        "text": "Không, chỉ cần theo dõi triệu chứng.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ cần thuốc uống.",
-        "correct": false
-      },
-      {
-        "text": "Không cần hóa trị nếu không có triệu chứng.",
         "correct": false
       }
     ]
